// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SSR > Nuxt GraphQL Request 1`] = `
<h2>
  Countries
</h2>
<ul>
  <!--[-->
  <li>
    Andorra
  </li>
  <li>
    Austria
  </li>
  <li>
    Åland
  </li>
  <li>
    Belgium
  </li>
  <li>
    Saint Barthélemy
  </li>
  <li>
    Cyprus
  </li>
  <li>
    Germany
  </li>
  <li>
    Estonia
  </li>
  <li>
    Spain
  </li>
  <li>
    Finland
  </li>
  <li>
    France
  </li>
  <li>
    French Guiana
  </li>
  <li>
    Guadeloupe
  </li>
  <li>
    Greece
  </li>
  <li>
    Ireland
  </li>
  <li>
    Italy
  </li>
  <li>
    Lithuania
  </li>
  <li>
    Luxembourg
  </li>
  <li>
    Latvia
  </li>
  <li>
    Monaco
  </li>
  <li>
    Montenegro
  </li>
  <li>
    Saint Martin
  </li>
  <li>
    Martinique
  </li>
  <li>
    Malta
  </li>
  <li>
    Netherlands
  </li>
  <li>
    Saint Pierre and Miquelon
  </li>
  <li>
    Portugal
  </li>
  <li>
    Réunion
  </li>
  <li>
    Slovenia
  </li>
  <li>
    Slovakia
  </li>
  <li>
    San Marino
  </li>
  <li>
    French Southern Territories
  </li>
  <li>
    Vatican City
  </li>
  <li>
    Kosovo
  </li>
  <li>
    Mayotte
  </li>
</ul>
<h2>
  Star wars movies
</h2>
<ul>
  <!--[-->
  <li>
    A New Hope
  </li>
  <li>
    The Empire Strikes Back
  </li>
  <li>
    Return of the Jedi
  </li>
  <li>
    The Phantom Menace
  </li>
  <li>
    Attack of the Clones
  </li>
  <li>
    Revenge of the Sith
  </li>
</ul>
`;

exports[`SSR > Runtime config 1`] = `
<h2>
  Countries (mergeAtRuntime)
</h2>
<ul>
  <!--[-->
  <li>
    Canada
  </li>
</ul>
<h2>
  Countries (runtimeOnly)
</h2>
<ul>
  <!--[-->
  <li>
    Canada
  </li>
</ul>
`;

exports[`SSR > Using batch queries 1`] = `
<h2>
  Characters, Page 1
</h2>
<ul>
  <!--[-->
  <li>
    Rick Sanchez
  </li>
  <li>
    Morty Smith
  </li>
  <li>
    Summer Smith
  </li>
  <li>
    Beth Smith
  </li>
  <li>
    Jerry Smith
  </li>
  <li>
    Abadango Cluster Princess
  </li>
  <li>
    Abradolf Lincler
  </li>
  <li>
    Adjudicator Rick
  </li>
  <li>
    Agency Director
  </li>
  <li>
    Alan Rails
  </li>
  <li>
    Albert Einstein
  </li>
  <li>
    Alexander
  </li>
  <li>
    Alien Googah
  </li>
  <li>
    Alien Morty
  </li>
  <li>
    Alien Rick
  </li>
  <li>
    Amish Cyborg
  </li>
  <li>
    Annie
  </li>
  <li>
    Antenna Morty
  </li>
  <li>
    Antenna Rick
  </li>
  <li>
    Ants in my Eyes Johnson
  </li>
</ul>
<h2>
  Characters, Page 2
</h2>
<ul>
  <!--[-->
  <li>
    Aqua Morty
  </li>
  <li>
    Aqua Rick
  </li>
  <li>
    Arcade Alien
  </li>
  <li>
    Armagheadon
  </li>
  <li>
    Armothy
  </li>
  <li>
    Arthricia
  </li>
  <li>
    Artist Morty
  </li>
  <li>
    Attila Starwar
  </li>
  <li>
    Baby Legs
  </li>
  <li>
    Baby Poopybutthole
  </li>
  <li>
    Baby Wizard
  </li>
  <li>
    Bearded Lady
  </li>
  <li>
    Beebo
  </li>
  <li>
    Benjamin
  </li>
  <li>
    Bepisian
  </li>
  <li>
    Beta-Seven
  </li>
  <li>
    Beth Sanchez
  </li>
  <li>
    Beth Smith
  </li>
  <li>
    Beth Smith
  </li>
  <li>
    Beth's Mytholog
  </li>
</ul>
`;

exports[`SSR > With .gql Import 1`] = `
<h2>
  Countries
</h2>
<ul>
  <!--[-->
  <li>
    American Samoa
  </li>
  <li>
    Bonaire
  </li>
  <li>
    Ecuador
  </li>
  <li>
    Micronesia
  </li>
  <li>
    Guam
  </li>
  <li>
    British Indian Ocean Territory
  </li>
  <li>
    Marshall Islands
  </li>
  <li>
    Northern Mariana Islands
  </li>
  <li>
    Puerto Rico
  </li>
  <li>
    Palau
  </li>
  <li>
    Turks and Caicos Islands
  </li>
  <li>
    East Timor
  </li>
  <li>
    U.S. Minor Outlying Islands
  </li>
  <li>
    British Virgin Islands
  </li>
  <li>
    U.S. Virgin Islands
  </li>
</ul>
<h2>
  Star wars movies
</h2>
<ul>
  <!--[-->
  <li>
    A New Hope
  </li>
  <li>
    The Empire Strikes Back
  </li>
  <li>
    Return of the Jedi
  </li>
  <li>
    The Phantom Menace
  </li>
  <li>
    Attack of the Clones
  </li>
  <li>
    Revenge of the Sith
  </li>
</ul>
`;

exports[`SSR > With AST 1`] = `
<h2>
  Countries
</h2>
<ul>
  <!--[-->
  <li>
    United Kingdom
  </li>
  <li>
    Guernsey
  </li>
  <li>
    South Georgia and the South Sandwich Islands
  </li>
  <li>
    Isle of Man
  </li>
  <li>
    Jersey
  </li>
</ul>
<h2>
  Star wars movies
</h2>
<ul>
  <!--[-->
  <li>
    A New Hope
  </li>
  <li>
    The Empire Strikes Back
  </li>
  <li>
    Return of the Jedi
  </li>
  <li>
    The Phantom Menace
  </li>
  <li>
    Attack of the Clones
  </li>
  <li>
    Revenge of the Sith
  </li>
</ul>
`;
